<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.ayush.mvpcleanarchitecture.LoginActivity">

    <TextView
        android:id="@+id/activity_login_textview_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/activity_login_edittext_email"
        android:inputType="textEmailAddress"
        android:hint="@string/edittext_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/activity_login_textview_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/activity_login_edittext_password"
        android:inputType="textPassword"
        android:hint="@string/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/activity_login_button_signin"
        android:text="@string/signin_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
